test/types/cptr/const/cross_type_assign.good
cross_type_assign.chpl:6: error: element type mismatch in c_ptrConst assignment
