test/types/cptr/const/cross_type_assign.chpl
use CTypes;

var x_const: c_ptrConst(int) = nil;
var y_const: c_ptrConst(uint) = nil;

x_const = y_const;
